--- a/tictactoe.css
+++ b/tictactoe.css
@@ -1,4 +1,8 @@
-
+.parent{
+    background-image: url(./OIP\ \(1\).jpeg);
+    width: 100%;
+    height: 100%;
+}
 body {
     display: flex;
     align-items: center;
